Try preventing bg shifting on mobile scroll

--- a/css/styling.css
+++ b/css/styling.css
@@ -25,6 +25,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     font-family: monospace;
+    height: 100vh;
 }
 
 main {
